# A

./: .gitignore  README.md  index.html  pyproject.toml
config/: default.yaml
data/: ths_sector_flows_0629.csv  ths_supplement_0629_from_screenshots.yaml
outputs/html_reports/: latest.html  latest_continuation.html  latest_dashboard.html  latest_limit.html  latest_overnight.html  latest_validation.html
outputs/predictions/: latest.json
src/a_share_t1_engine/: __init__.py  archive.py  calibrate_cli.py  calibration.py  cli.py  config.py  continuation.py  event_sources.py  image_ocr.py  models.py  overnight.py  parser.py  pdf_reader.py  pipeline.py  predictions.py  report.py  report_pack.py  scoring.py  sentiment_sources.py  source_policy.py  ths_sources.py  trading_calendar.py  validate_cli.py  validation.py  web_app.py
tests/: test_golden_snapshot.py
tests/snapshots/: sample_report.md
