[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "a-share-t1-engine"
version = "0.1.0"
description = "A-share T+1 limit-up continuation probability engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.1",
  "pypdf>=4.2.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[project.scripts]
a-share-t1-engine = "a_share_t1_engine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/a_share_t1_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
